test/bad/generators/lambda02.px

f = lambda* def
    yield 1
    yield true

f()
